# GPS-NEMA-data-encoder

./: 1111111111.csv  22.csv  3gps.csv  45.csv  G65.csv  G65_D.csv  NEO.csv  NEO0.csv  NEO_D.csv  README.md  USB0.csv  USB_D.csv  USB_NEO_G65.csv  USB_NEO_G65_D.csv  final_test.py  ggg65.csv  gps.py  gps2.py  gps3.py  gps_d.py  gps_plot.py  test.py
Error_script/: ReadMe.txt  log_script.py  logsCheck  prerun.sh
GPS_V2/: gpstest.txt
GPS_V2/Debug/: GPS_V2  makefile
GPS_V2/Debug/src/: GPS_V2.d  subdir.mk
GPS_V2/src/: GPS_V2.cpp
libnmea_226/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool
libnmea_226/autom4te.cache/: output.0  requests  traces.0  traces.1
libnmea_226/doc/: nmea.doxygen
libnmea_226/doc/html/: context_8c_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  generate_8c_source.html  generator_8c_source.html  gmath_8c_source.html  index.hhc  index.hhp  index.html  info_8c_source.html  parse_8c_source.html  parser_8c_source.html  sentence_8c_source.html  test__time_8c_source.html  time_8c_source.html  tok_8c_source.html
libnmea_226/doc/man/man3/: _home_dave_src_nmealib_src_.3  _tmp_libnmea-0.5.3_src_.3
libnmea_226/samples/: Makefile  Makefile.am  Makefile.in
libnmea_226/samples/generate/: Makefile  Makefile.am  Makefile.in  generate  main.c
libnmea_226/samples/generator/: Makefile  Makefile.am  Makefile.in  generator  main.c
libnmea_226/samples/math/: Makefile  Makefile.am  Makefile.in  main.c  math
libnmea_226/samples/parse/: Makefile  Makefile.am
libnmea_make/: main.c
